k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job-ai-service
  namespace: job-ai
spec:
  selector:
    app: job-ai-assistant
  type: NodePort
  ports:
    - name: fastapi
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080

    - name: streamlit
      protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30501
